# token-presale

./: Anchor.toml  README.md  admin.json  kinobi.ts  package.json  tsconfig.json  vault.json
cli/: command.ts  scripts.ts
lib/: constant.ts  executor.ts  scripts.ts  types.ts  util.ts
programs/presale/: Cargo.toml
programs/presale/src/: constant.rs  error.rs  lib.rs  state.rs  util.rs
programs/presale/src/instructions/: buy.rs  buy_with_stable_coin.rs  buy_with_stable_coin_to.rs  change_admin.rs  deposit_presale_token.rs  init_user.rs  initialize.rs  mod.rs  set_live.rs  set_stage.rs  set_vault_address.rs  start_presale.rs
tests/: airdrop-tokens.ts  config.ts  constant.ts  create-mints.ts  presale.ts  utils.ts
tests/keys/: token.json  usdc.json  usdt.json  vault.json
